--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
-    hello
+    <form action="http://jobs.tubularlabs.net/job/spark-on-mesos-kill-driver-or-cluster/buildWithParameters" method='POST'>
+      <input type="hidden" name="jello" value="yello">
+      <input type="submit">
+      </form>
   </body>
   </html>
