--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    This is my form
-    <form action="http://jobs.tubularlabs.net/job/spark-on-mesos-kill-driver-or-cluster/buildWithParameters" method='POST'>
-      <input type="hidden" name="jello" value="yello">
-      <input type="submit">
-    </form>
-    <script>
-      alert("Monika Here");
-    </script>
-    
-  </body>
-  </html>
+<body>
+
+<iframe src="https://www.w3schools.com">
+  <p>Your browser does not support iframes.</p>
+</iframe>
+
+</body>
+</html>
