--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<iframe src="https://www.w3schools.com">
-  <p>Your browser does not support iframes.</p>
-</iframe>
-
-</body>
+  <head><title>Adios, Gozaimas</title></head>
+  <body style="background-color:#aa5252">
+    <h1 style="text-align: center; font-size: 256px;">BBUZ BUZZES</h1>
+  </body>
 </html>
